# searchEngine

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  benchmark_results.json  coverage.xml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml
apps/web/: app.py  launch.sh
apps/web/visualizations/: __init__.py  attention.py  galaxy.py
config/environments/: 12gb_gpu.yaml  24gb_gpu.yaml
docs/: BENCHMARK_TOOLS.md  FAISS_GPU_SETUP.md  NPROBE_TUNING.md
my_workspace/indices/: index.faiss  metadata.json
scripts/: install_faiss_gpu.sh  verify_faiss_gpu.py
src/nexus_mind/: __init__.py
src/nexus_mind/application/: __init__.py
src/nexus_mind/application/use_cases/: __init__.py
src/nexus_mind/application/use_cases/discovery/: __init__.py  concept_interpolation.py  cross_modal_chain.py  semantic_clustering.py
src/nexus_mind/application/use_cases/search/: temporal_search.py
src/nexus_mind/core/: __init__.py  engine.py
src/nexus_mind/infrastructure/compute/: optimizer.py
src/nexus_mind/infrastructure/memory/: __init__.py  manager.py
src/nexus_mind/infrastructure/models/: __init__.py  clip.py  quantization.py
src/nexus_mind/infrastructure/storage/cache/: tiered_cache.py
src/nexus_mind/infrastructure/storage/vector/: __init__.py  faiss_backend.py
src/nexus_mind/interfaces/cli/: __init__.py  main.py
src/nexus_mind/plugins/: base.py
src/nexus_mind/plugins/builtin/: __init__.py  exporters.py  processors.py
test_workspace/indices/: config.json
tests/: __init__.py  test_memory_protection.py  test_phase1_validation.py
tests/unit/: test_faiss_gpu.py  test_memory_manager.py  test_performance.py  test_phase2_features.py  test_phase4_features.py  test_web_interface.py
tools/: benchmark.py  large_scale_test.py  million_vector_benchmark.py  million_vector_test.py  nprobe_tuner.py
