[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-mind"
version = "0.1.0"
description = "NexusMind - Next-gen multimodal semantic search engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "NexusMind Team"}
]
keywords = ["semantic-search", "multimodal", "clip", "faiss", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    # FAISS: Auto-detect GPU/CPU version
    # For GPU: pip install faiss-gpu-cu12 (CUDA 12.x) or faiss-gpu-cu11 (CUDA 11.x)
    # For CPU: pip install faiss-cpu
    # See install scripts in scripts/install_faiss_gpu.sh
    "faiss-cpu>=1.7.4; sys_platform == 'linux' and extra != 'gpu'",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "tqdm>=4.66.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
web = [
    "streamlit>=1.28.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
advanced = [
    "plotly>=5.18.0",
    "hdbscan>=0.8.33",
    "umap-learn>=0.5.4",
    "networkx>=3.2.1",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    # Test dependencies from advanced and web
    "scikit-learn>=1.3.0",
    "plotly>=5.18.0",
    "opencv-python>=4.8.0.76",
]
gpu = [
    # GPU support - install matching CUDA version
    # CUDA 12.x: pip install faiss-gpu-cu12
    # CUDA 11.x: pip install faiss-gpu-cu11
    "faiss-gpu-cu12>=1.7.4; sys_platform == 'linux' and extra == 'gpu'",
]
all = ["nexus-mind[web,advanced,dev,gpu]"]

[project.scripts]
nexus = "nexus_mind.interfaces.cli.main:app"

[project.urls]
Homepage = "https://github.com/changQiangXia/searchEngine"
Repository = "https://github.com/changQiangXia/searchEngine"
# Documentation = "https://changqiangxia.github.io/searchEngine"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus_mind"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "faiss.*",
    "hdbscan.*",
    "umap.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/nexus_mind"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
